--- a/examples/index.html
+++ b/examples/index.html
@@ -42,6 +42,11 @@
     texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
     texture.anisotropy = 16;
 
+    const alphaTexture = new THREE.TextureLoader().load('./images/mask.png');
+    alphaTexture.wrapS = alphaTexture.wrapT = THREE.ClampToEdgeWrapping;
+    alphaTexture.magFilter = alphaTexture.minFilter = THREE.NearestFilter;
+    // alphaTexture.anisotropy = 16;
+
     const camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
     camera.position.set(50, 50, 50);
 
@@ -91,7 +96,7 @@
     window.addEventListener('resize', onWindowResize, false);
     onWindowResize();
 
-    const params = { map: !!line.material.map, repeat: 1, offset: 0 };
+    const params = { map: { enable: !!line.material.map, repeat: 1, offset: 0 }, alpha: { enable: !!line.material.alphaMap, repeat: 1, offset: 0 } };
     const gui = new dat.GUI();
     gui.add(line.material.defines, 'DISABLE_CORNER_BROKEN').onChange(() => line.material.needsUpdate = true);
     gui.add(line.material, 'transparent');
@@ -99,21 +104,33 @@
     gui.add(line.material, 'opacity', 0, 1, 0.01);
     gui.add(line.material, 'lineWidth', 0, 10, 0.01);
     gui.add(line.material, 'cornerThreshold', 0, 1, 0.01);
-
-    gui.add(params, 'map').onChange(() => {
-        line.material.map = params.map ? texture : null;
-        line.material.needsUpdate = true;
-    });
+    
     gui.add(line.material.defines, 'SIMPLE_UV').onChange(() => line.material.needsUpdate = true);
     // gui.add(line.material.defines, 'SCREEN_UV').onChange(() => line.material.needsUpdate = true);
     gui.add(line.material.defines, 'FLAT_W').onChange(() => line.material.needsUpdate = true);
 
-    const uvFolder = gui.addFolder('uv');
-    uvFolder.add(params, 'repeat', 0.01, 10, 0.01).onChange(value => {
-        line.material.uniforms.uvTransform.value.setUvTransform(0, params.offset, 1, params.repeat, 0, 0, 0);
+    const mapFolder = gui.addFolder('map');
+    mapFolder.add(params.map, 'enable').onChange((value) => {
+        line.material.map = params.map.enable ? texture : null;
+        line.material.needsUpdate = true;
     });
-    uvFolder.add(params, 'offset', 0, 100, 0.01).onChange(value => {
-        line.material.uniforms.uvTransform.value.setUvTransform(0, params.offset, 1, params.repeat, 0, 0, 0);
+    mapFolder.add(params.map, 'repeat', 0.01, 10, 0.01).onChange(value => {
+        line.material.uniforms.uvTransform.value.setUvTransform(0, params.map.offset, 1, params.map.repeat, 0, 0, 0);
+    });
+    mapFolder.add(params.map, 'offset', 0, 100, 0.01).onChange(value => {
+        line.material.uniforms.uvTransform.value.setUvTransform(0, params.map.offset, 1, params.map.repeat, 0, 0, 0);
+    });
+
+    const alphaFolder = gui.addFolder('alphaMap');
+    alphaFolder.add(params.alpha, 'enable').onChange(() => {
+        line.material.alphaMap = params.alpha.enable ? alphaTexture : null;
+        line.material.needsUpdate = true;
+    });
+    alphaFolder.add(params.alpha, 'repeat', 0.01, 10, 0.01).onChange(value => {
+        line.material.uniforms.uvTransform1.value.setUvTransform(0, params.alpha.offset, 1, params.alpha.repeat, 0, 0, 0);
+    });
+    alphaFolder.add(params.alpha, 'offset', 0, 10000, 0.01).onChange(value => {
+        line.material.uniforms.uvTransform1.value.setUvTransform(0, -params.alpha.offset, 1, params.alpha.repeat, 0, 0, 0);
     });
 </script>
 
